--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@react-three/drei": "^9.58.4",
     "@react-three/fiber": "^8.12.0",
     "animejs": "^3.2.1",
+    "emailjs": "^4.0.1",
+    "emailjs-com": "^3.2.0",
+    "formik": "^2.2.9",
     "framer-motion": "^10.8.5",
     "maath": "^0.5.3",
     "react": "^18.2.0",
@@ -22,7 +25,8 @@
     "react-slick": "^0.29.0",
     "react-vertical-timeline-component": "^3.6.0",
     "styled-components": "^5.3.10",
-    "three": "^0.150.1"
+    "three": "^0.150.1",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
